<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profileBackground"
    tools:context=".Profile2">

    <!-- Top Bar -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile4"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"/>

    <!-- Name -->
    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_name"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Email -->
    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_email"
        android:textSize="14sp"
        android:textColor="@color/lightGray"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/profileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Buttons -->
    <LinearLayout
        android:id="@+id/actionButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/profileEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/editProfileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/buttonColorSecondary"
            android:textColor="@color/white"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
